--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "mongodb": "^6.19.0",
         "mongoose": "^8.18.1",
         "node": "^24.8.0",
-        "nodeman": "^1.1.2"
+        "nodeman": "^1.1.2",
+        "sequelize": "^6.37.7"
     }
 }
