--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "dependencies": {
         "bcrypt": "^6.0.0",
         "cors": "^2.8.5",
+        "dotenv": "^17.2.3",
         "eslint": "^9.36.0",
         "express": "^5.1.0",
         "mongodb": "^6.19.0",
         "mongoose": "^8.18.1",
         "node": "^24.8.0",
         "nodeman": "^1.1.2",
+        "pg": "^8.16.3",
         "sequelize": "^6.37.7"
     }
 }
