--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
-POST_URL=postgres://root:tj6Zq6xV3UkaKmi1ZRzCVHtbq2n5sno4@dpg-d33sdtmmcj7s73al8tp0-a.oregon-postgres.render.com/company_data_kamp?sslmode=require
+POST_URL=postgres://postgres:root1234@localhost:5432/companydb?sslmode=disable
 
 DB_NAME=companydb
 DB_USER=postgres
-DB_PASS=tj6Zq6xV3UkaKmi1ZRzCVHtbq2n5sno4
+DB_PASS=root1234
 DB_HOST=localhost
 
 JWT_SECRET= secure12340987DFA07WTYU102006HJTYUOL
