--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "scripts": {
-        "start": "nodemon index.js"
+        "start": "nodemon server.js"
     },
     "prettier": {
         "semi": true,
@@ -10,14 +10,17 @@
     },
     "dependencies": {
         "bcrypt": "^6.0.0",
+        "bcryptjs": "^3.0.2",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "eslint": "^9.36.0",
         "express": "^5.1.0",
+        "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.19.0",
         "mongoose": "^8.18.1",
         "node": "^24.8.0",
         "nodeman": "^1.1.2",
+        "nodemon": "^3.1.10",
         "pg": "^8.16.3",
         "sequelize": "^6.37.7"
     }
